--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,17 @@
   	<url>http://www.antidot.net</url>
   </organization>
   <build>
+    <plugins>
+       <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-compiler-plugin</artifactId>
+           <version>2.3.2</version>
+           <configuration>
+              <source>1.5</source>
+              <target>1.5</target>
+           </configuration>
+       </plugin>
+    </plugins>
   	<extensions>
   	</extensions>
   </build>
