--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openrdf.sesame</groupId>
-      <artifactId>sesame-runtime</artifactId>
-      <version>2.5.0</version>
-      <type>pom</type>
     </dependency>  
     <dependency>
     	<groupId>commons-logging</groupId>
@@ -38,6 +32,26 @@
     	<groupId>commons-cli</groupId>
     	<artifactId>commons-cli</artifactId>
     	<version>1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.openrdf.sesame</groupId>
+        <artifactId>sesame-sail-nativerdf</artifactId>
+        <version>2.5.1</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.openrdf.sesame</groupId>
+    	<artifactId>sesame-runtime</artifactId>
+    	<version>2.5.1</version>
+    	<type>pom</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-simple</artifactId>
+    	<version>1.6.1</version>
+    	<type>jar</type>
+    	<scope>runtime</scope>
     </dependency>
   </dependencies>
   
@@ -73,6 +87,14 @@
            <configuration>
               <source>1.5</source>
               <target>1.5</target>
+           </configuration>
+       </plugin>
+       <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-dependency-plugin</artifactId>
+           <version>2.3</version>
+           <configuration>
+              <outputFile>/tmp/cp.txt</outputFile>
            </configuration>
        </plugin>
     </plugins>
